=== HEAD

* Add Array#sql_array to handle ruby arrays of all two pairs as SQL arrays (jeremyevans) (#245)

* Add ComplexExpression#== and #eql?, for checking equality (rubymage) (#244)

* Allow full text search on PostgreSQL to include rows where a search column is NULL (jeremyevans)

* PostgreSQL full text search queries with multiple columns are joined with space to prevent joining border words to one (michalbugno)

* Don't modify a dataset's cached column information if calling #each with an option that modifies the columns (jeremyevans)

* The PostgreSQL adapter will now generally default to using a unix socket in /tmp if no host is specified, instead of a tcp socket to localhost (jeremyevans)

* Make Dataset#sql call Dataset#select_sql instead of being an alias, to allow for easier subclassing (jeremyevans)

* Split Oracle adapter into shared and unshared parts, so Oracle is better supported when using JDBC (jeremyevans)

* Fix automatic loading of Oracle driver when using JDBC adapter (bburton333) (#242)

=== 2.6.0 (2008-10-11)

* Make the sqlite adapter respect the Sequel.datetime_class setting, for timestamp and datetime types (jeremyevans)

* Enhance the CASE statement support to include an optional expression (jarredholman)

* Default to using the simple language if no language is specified for a full text index on PostgreSQL (michalbugno)

* Add Model.raise_on_typecast_failure=, which makes it possible to not raise errors on invalid typecasts (michalbugno)

* Add schema.rdoc file, which provides an brief description of the various parts of Sequel related to schema modification (jeremyevans)

* Fix constraint generation when not using a proc or interpolated string (jeremyevans)

* Make eager_graph respect associations' :order options (use :order_eager_graph=>false to disable) (jeremyevans)

* Cache negative lookup when eagerly loading many_to_one associations where no objects have an associated object (jeremyevans)
