@@ -1,5 +1,7 @@
 === HEAD
 
+* Don't typecast serialized columns in models (jeremyevans)
+
 * Add Array#sql_array to handle ruby arrays of all two pairs as SQL arrays (jeremyevans) (#245)
 
 * Add ComplexExpression#== and #eql?, for checking equality (rubymage) (#244)
